<resources>
    <string name="app_name">Proyecto Final Electiva</string>
    <string name="title_activity_principal">ActivityPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BGW Corona News APP</string>
    <string name="nav_header_subtitle">Grupo 2 - Electiva IV</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="mostrar_usuarios">Mostrar Usuarios</string>
    <string name="adm_usuario">Adm Usuarios</string>

    <string name="menu_home">Noticias</string>
    <string name="menu_gallery">Mitos</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="usuario">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registrarse">Nuevo Usuario</string>

    <string name="Saludo">Saludos</string>
    <string name="Teexto_accion">Cerrar</string>

    <string name="Configuracion">Configuracion</string>

    <string name="guardar_Sesion">Guardar Sesion</string>

    <string-array name="ciudades">
        <item>Quito</item>
        <item>Guayaquil</item>
        <item>Cuenca</item>
        <item>Baños</item>
        <item>De Nuevo</item>
        <item>Ibarra</item>
        <item>Manta</item>
        <item>Ambato</item>
        <item>Riobamba</item>
        <item>Loja</item>
    </string-array>

    <string name="tema_oscuro">Tema Oscuro</string>

    <!-- Notificaciones dentro de las activity -->
    <string name="Activity_NoUdsuario">NO SE ENCONTRARON USUARIOS</string>
    <string name="Activity_adUsuario">ADMINISTRADOR DE USUARIOS</string>
    <string name="Activity_listaUsuario">LISTAS DE USUARIOS</string>
    <string name="Activity_confiUsuario">Configuración</string>
    <string name="Activity_ErrorConexion">Error de Conexión</string>

    <string name="Activity_IDIncorrecto">ID Incorrecto</string>
    <string name="Activity_SexoMasculino">Sexo Masculino</string>
    <string name="Activity_SexoFemenino">Sexo Femenino</string>
    <string name="Activity_SexoOtro">Sexo Otro</string>
    <string name="Activity_UsuarioActualizado">USUARIO ACTUALIZADO CORRECTAMENTE</string>
    <string name="Activity_UsuarioAgregado">USUARIO AGREGADO CORRECTAMENTE</string>
    <string name="Activity_UsuarioEliminado">EL USUARIO FUE ELIMINADO CON EXITO</string>
    <string name="Activity_SalidaAdUsuario">Salida de Administración de Usuario.....</string>
    <string name="Activity_SalidaNuevoUsuario">Salida de Nuevo Usuario.....</string>

    <string name="Activity_SALUDO">Hola</string>
    <string name="Activity_BIENVENIDO">Bienvenido</string>

    <string name="Activity_UsuarioVacio">Campo usuario o contrasena vacio</string>
    <string name="Activity_UsuarioIncorrecto">Usuario o Contrasena Incorrecta</string>
    <string name="Activity_UsuarioConfiguracion">Configuración</string>

    <!-- Datos para los registro de usuarios -->
    <string name="registro_Usuario">Nuevo Usuario</string>
    <string name="administrar_Usuario">CRUD Usuario</string>

    <string name="registro_nombre">Nombre</string>
    <string name="registro_apellido">Apellido</string>
    <string name="registro_sexo">Sexo</string>
    <string name="registro_masculino">Masculino</string>
    <string name="registro_femenino">Femenino</string>
    <string name="registro_otro">Otro</string>
    <string name="registro_usuario">Usuario</string>
    <string name="registro_telefono">Telefono</string>
    <string name="registro_ciudad">Ciudad de Nacimiento</string>
    <string name="registro_fecha">Fecha de Nacimiento</string>
    <string name="registro_email">Correo</string>
    <string name="registro_contrasena">Contraseña</string>


    <string name="registro_registrar">REGISTRAR</string>
    <string name="registro_cancelar">CANCELAR</string>
    <string name="Boton_salir">SALIR</string>
    <string name="Boton_buscar">BUSCAR</string>
    <string name="Boton_actualizar">ACTUALIZAR</string>
    <string name="Boton_eliminar">ELIMINAR</string>

    <string name="Boton_lugarvacunacion">Vacunación</string>
    <string name="Boton_certificadovacunacion">Certificado Vacunación</string>


    <string name="menu_cerrarsesion">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola Crack</string>

    <!-- Configuracion -->
    <string name="activity_configuracion">CONFIGURACIÓN</string>
    <string name="activity_configuracionidioma">Idioma</string>
    <string name="activity_configuracionidiomaboton">Español</string>
    <string name="activity_configuracionidiomatema">Tema</string>


    <string name="facebook_app_id">6439520442739945</string>
    <string name="fb_login_protocol_scheme">fb6439520442739945</string>


</resources>